# haystack-financial-doc-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: irs_1040_extraction.py  irs_w2_extraction.py  run_pipeline.py
src/haystack_financial_doc_extractor/: __init__.py  pipeline.py
src/haystack_financial_doc_extractor/components/: __init__.py  azure_di_extractor.py  delta_calculator.py  document_ingestion.py  kv_normalizer.py
src/haystack_financial_doc_extractor/models/: __init__.py  extracted_field.py  kv_entry.py  section.py
src/haystack_financial_doc_extractor/persistence/: __init__.py  sqlite_store.py
src/haystack_integrations/components/azure_di_financial/: __init__.py  azure_di_extractor.py  delta_calculator.py  document_ingestion.py  irs_form_classifier.py  kv_normalizer.py  pipeline.py  translation.py
src/haystack_integrations/components/azure_di_financial/models/: __init__.py  extracted_field.py  kv_entry.py
tests/: test_azure_di_extractor.py  test_delta_calculator.py  test_haystack_integration.py  test_integration_live.py  test_irs_form_classifier.py  test_kv_normalizer.py  test_translation.py
